# aoc

2024/aoc/: Cargo.toml
2024/aoc/crates/day1/: Cargo.toml
2024/aoc/crates/day1/src/: main.rs
2024/aoc/crates/day1part1/src/: main.rs
2024/aoc/crates/day2/: Cargo.toml
2024/aoc/crates/day2/src/: main.rs
